# data-engineering

./: .gitignore  LICENSE  README.md
api_auth/: README.md  main.py  pyproject.toml  requirements.txt
my_aws_projects/glue-w-tf/: readme.md
my_aws_projects/glue-w-tf/glue/: sample_job.py
my_aws_projects/glue-w-tf/infra/: .terraform.lock.hcl  glue.tf  providers.tf
my_aws_projects/glue-w-tf/infra/bootstrap/: main.tf
my_aws_projects/glue-w-tf/infra/stages/: prod.tfvars
